--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,47 @@
-spring.application.name=demo
+# ===== H2 Database Configuration =====
+spring.datasource.url=jdbc:h2:mem:lab12db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# ===== H2 Console Settings =====
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.settings.trace=false
+
+# ===== JPA/Hibernate Configuration =====
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.open-in-view=false
+
+# ===== Database Dialect =====
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# ===== Web Configuration =====
+server.port=8080
+server.servlet.context-path=/api
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# ===== Pagination Defaults =====
+spring.data.web.pageable.default-page-size=10
+spring.data.web.pageable.max-page-size=50
+
+# ===== Logging =====
+logging.level.org.springframework=INFO
+logging.level.com.example.lab12=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===== HTTP Settings =====
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+server.compression.min-response-size=1024
+
+# ===== Actuator Endpoints =====
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
